--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-11 00:54:15
+lastsearch = 2024-08-11 06:20:08
 
 [www.youtube.com]
 match = -105.3%%
@@ -52,9 +52,9 @@ title = Bão từ mạnh nhất trong hai thập kỷ gây ảnh hưởng tới 
 url = https://baothanhhoa.vn/bao-tu-manh-nhat-trong-hai-thap-ky-gay-anh-huong-toi-viet-nam-214083.htm
 
 [shophoavungtau.com]
-match = -126.3%%
-title = Hoa Thược Dược: Ý nghĩa và Cách trồng nở đúng dịp Tết
-url = https://shophoavungtau.com/hoa-thuoc-duoc-y-nghia-va-cach-trong
+match = -89.5%%
+title = Ý nghĩa hoa mộc lan: Vẻ đẹp của sự thuần khiết
+url = https://shophoavungtau.com/y-nghia-hoa-moc-lan
 
 [tiin.vn]
 match = -147.4%%
@@ -72,8 +72,8 @@ title = Cây hoa Mộc Hương
 url = https://qkhgarden.com/products/cay-hoa-moc-huong
 
 [guitanghoa.com]
-match = -147.4%%
-title = Cây Hoa Mộc Lan Là Hoa Gì? - Hình ảnh Và Ý nghĩa của ...
+match = -157.9%%
+title = Cây Hoa Mộc Lan Là Hoa Gì? - Hình ảnh Và Ý nghĩa của chúng
 url = https://guitanghoa.com/hoa-dep/cay-hoa-moc-lan/
 
 [vi.wikipedia.org]
@@ -194,7 +194,7 @@ url = https://webthethao.vn/euro/truoc-luc-quyet-dau-o-euro-2024-ha-lan-romania-
 [www.diepxuan.com]
 match = 0.0%%
 title = Chiếu cây mộc hoa 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html?srsltid=AfmBOopjc-ExMCZgydTcA-TYxGCjwOgONuklSlcJiDTlCC9ZQOwd7hKL
+url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html
 
 [baobinhphuoc.com.vn]
 match = -42.1%%
@@ -304,7 +304,7 @@ url = https://thegioihoa.net/post/hoa-chieu-tim-va-nhung-y-nghia-sau-sac-cua-chu
 [nhavuonkhanhvo.com]
 match = -115.8%%
 title = Cây Hoa Trà My Cổ 7 Năm Tuổi Đang Hoa Cao 1,2m - 1,5m
-url = https://nhavuonkhanhvo.com/products/cay-hoa-tra-my-co-7-nam-tuoi-dang-hoa-cao-1-2m-1-5m?srsltid=AfmBOor8HI-eH0iyMtaBY1_lRzjAIPVY0sGZZhH7GhFwIX9XIIYY0B73
+url = https://nhavuonkhanhvo.com/products/cay-hoa-tra-my-co-7-nam-tuoi-dang-hoa-cao-1-2m-1-5m
 
 [ttkhcn.baria-vungtau.gov.vn]
 match = -68.4%%
