--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-08-11 05:41:50
+lastsearch = 2024-08-11 06:20:52
 
 [demxanh.com]
 match = -14.8%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOooWzbh6ZTgslAM744jKWPM--r6I8FB3Ic2vHS4wqyrMzzqP8AKK
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [shopee.vn]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = chiếu điều hoà giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=chiếu điều hoà
 
 [goni.vn]
-match = -33.3%%
-title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa không
-url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
+match = 18.5%%
+title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
+url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [russo.vn]
 match = 29.6%%
