--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-08-11 05:39:48
+lastsearch = 2024-08-11 06:20:31
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -253.3%%
-title = [ Black Kingdom - D2 ] Sân chơi đốt cháy niềm đam mê game ...
-url = https://www.facebook.com/blackkingdom.ngt/videos/-black-kingdom-d2-sân-chơi-đốt-cháy-niềm-đam-mê-game-thủ-của-bạnvới-từng-cấu-hìn/767331274830836/?locale=hi_IN
+match = -166.7%%
+title = Celadon Sports & Resort Club | Ho Chi Minh City
+url = https://www.facebook.com/CeladonSRC/?locale=vi_VN
 
 [phongthuykyhoa.com]
 match = -73.3%%
