--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-08-11 01:45:54
+lastsearch = 2024-08-11 06:19:46
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -24,7 +24,7 @@ url = https://chieutrelanlan.com/tim-hieu-ve-chieu-truc-n20.html
 [demxanh.com]
 match = -87.0%%
 title = Tư vấn mua chiếu trúc thanh chính hãng, giá rẻ tại Đệm Xanh
-url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html?srsltid=AfmBOopNzXArC5UfAq01_90Dwopsp5qfIGN4wdcHJPm7J64IeqptFovv
+url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html
 
 [www.dienmayxanh.com]
 match = -73.9%%
@@ -259,7 +259,7 @@ url = https://vnrack.vn/
 [www.lazada.vn]
 match = -43.5%%
 title = Chiếu Mây Điều Hòa, Chiếu trúc Không Mát Bằng ...
-url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-truc-khong-mat-bang-chieu-huong-dieu-hoa-chieu-ngu-mua-he-16-m-i717202773.html?srsltid=AfmBOoo73yWK90Us0EQZDoSVLEtdHXibc3N5_BiqRpa6wPf-OQwbo_Gn
+url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-truc-khong-mat-bang-chieu-huong-dieu-hoa-chieu-ngu-mua-he-16-m-i717202773.html
 
 [www.tuyensinh.dau.edu.vn]
 match = -104.3%%
