--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-11 02:28:05
+lastsearch = 2024-08-11 06:12:52
 
 [www.zillow.com]
 match = -115.4%%
@@ -132,9 +132,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [twitter.com]
-match = -92.3%%
-title = Shahzad Gani 🍉 (@shahzadgani) ...
-url = https://twitter.com/shahzadgani?lang=en
+match = 8.3%%
+title = Aisha S Gani
+url = https://twitter.com/aishagani?lang=en
 
 [kidshealth.org]
 match = 0.0%%
@@ -609,7 +609,7 @@ url = https://apnews.com/article/willis-wade-relationship-allegations-trump-elec
 [www.lazada.vn]
 match = -169.2%%
 title = Ga Ni Long Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOop5xiMUHy38T4D3hkz008SxvxPeBVnPJ3mDeGl_WlIQ920wXbyK
+url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOop6fVDgZHaxdachiaPCQsiZP3JhUUqRw2DfgIk8Z_1TMVwdS6O8
 
 [www.njcaa.org]
 match = -140.0%%
