--- a/images/nem-foam-dreamland-uc-180x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-180x200x20/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-180x200x20.html
 lastopen = 2024-06-07 00:24:18
 
 [search]
-lastsearch = 2024-08-11 05:17:32
+lastsearch = 2024-08-11 06:27:12
 
 [www.diepxuan.com]
 match = 40.6%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOop2Fx4UxiNaIPuwYjVQ736dNVORFJZ3mB5jXHzzUp0zoT00ZQPU
 
 [demxanh.com]
 match = 29.0%%
 title = Mua đệm cao su Dreamland ở đâu?
-url = https://demxanh.com/mua-dem-cao-su-dreamland-o-dau.html
+url = https://demxanh.com/mua-dem-cao-su-dreamland-o-dau.html?srsltid=AfmBOorCXczXEV90vrbQWdpF84E1ktnOHyYx3WjjTeEax63rcdyvxvql
 
 [changagoidemdep.vn]
 match = -12.5%%
@@ -84,7 +84,7 @@ url = http://www.dreamland.vn/Dem-Lo-Xo-VIP-5-Sao---30cm-i4420.html
 [demluxury.com.vn]
 match = 9.4%%
 title = Đệm Nano Foam Massage Kawaii Dreamland
-url = https://demluxury.com.vn/san-pham/dem-nano-foam-massage-kawaii-dreamland/
+url = https://demluxury.com.vn/san-pham/dem-nano-foam-massage-kawaii-dreamland/?srsltid=AfmBOooInNViE8RSPnNltaHA6rzgquko9F51aJBubTLxPKkBNadjZ-0_
 
 [nemkimcuong.vn]
 match = 23.1%%
