--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-08-11 00:40:12
+lastsearch = 2024-08-11 06:25:12
 
 [www.diepxuan.com]
 match = -5.9%%
@@ -17,19 +17,19 @@ title = Ruột gối ép Hàn Quốc Korea , ruot-goi-ep-han-quoc-korea
 url = https://entershopping.vn/ruot-goi-ep-han-quoc-korea.html
 
 [www.detmaykimthanh.com]
-match = 52.9%%
-title = Ruột gối Standard
-url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-129.html
+match = 5.9%%
+title = Ruột gối Microfiber Korea Virgin
+url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
 
 [shopee.vn]
-match = 64.7%%
-title = Ruột gối ép hơi Korea
-url = https://shopee.vn/Ruột-gối-ép-hơi-Korea-i.86050283.1557277406
+match = 58.8%%
+title = ruột gối hơi hiệu KOREA
+url = https://shopee.vn/ruột-gối-hơi-hiệu-KOREA-i.43470238.725470536
 
 [demxanh.com]
 match = -100.0%%
 title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html?srsltid=AfmBOorEqe6ZaaS2cO1WfgC49JLJEaxZ0Ci0pWhUO1RVgAjs7D_L9pvP
+url = https://demxanh.com/ruot-goi.html
 
 [everonkorea.com]
 match = -100.0%%
