--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-08-11 06:24:51
+lastsearch = 2024-08-11 08:07:45
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -22,9 +22,9 @@ title = Bộ ga gối chun Olympia chần vải Cotton Hàn 16
 url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html
 
 [foreverbedding.net]
-match = -33.3%%
-title = Bộ ga chun Velina V16 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v16
+match = -57.1%%
+title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
 
 [changagoidemsonghong.com]
 match = -38.1%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối everon ES1816
 url = https://everon365.vn/bo-chan-ga-goi-everon-es-1816.html
 
 [shopee.vn]
-match = -100.0%%
-title = GA CHUN TRẦN CÓ BÈO PHỦ NGẮN siêu đẹp - Ga gối nỉ ...
-url = https://shopee.vn/Bộ-GA-GỐI-NỈ-NHUNG-TRẦN-BÔNG-GA-NỈ-PHỦ-TRẦN-BÔNG-GA-CHUN-TRẦN-CÓ-BÈO-PHỦ-NGẮN-siêu-đẹp-Ga-gối-nỉ-nhung-cao-cấp-i.11781398.17889810969
+match = -66.7%%
+title = ga chun bọc nệm giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=ga chun bọc nệm
 
 [runa.vn]
 match = -4.8%%
