--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-08-11 04:35:08
+lastsearch = 2024-08-11 08:04:12
 
 [shopee.vn]
-match = -4.0%%
-title = CHIẾU ĐIỀU HOÀ CAO SU NON CAO CẤP MODERN ...
-url = https://shopee.vn/CHIẾU-ĐIỀU-HOÀ-CAO-SU-NON-CAO-CẤP-MODERN-(-video-quay-cận-chất)-i.46360011.4484797264
+match = -24.0%%
+title = chiếu điều hòa kèm gối giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
 
 [meoi.com.vn]
 match = 24.0%%
@@ -42,9 +42,9 @@ title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
 url = https://demxanh.com/chieu-dieu-hoa.html
 
 [tiki.vn]
-match = 16.0%%
-title = Chiếu điều hòa có mát không? Review 10 ...
-url = https://tiki.vn/blog/chieu-dieu-hoa/
+match = -20.0%%
+title = Chieu dieu hoa kem vo goi hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chieu dieu hoa kem vo goi
 
 [goni.vn]
 match = 8.0%%
