--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-11 04:30:46
+lastsearch = 2024-08-11 08:08:49
 
 [batdongsan.com.vn]
 match = -180.0%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -146.7%%
-title = Cong khuỷu tay sang 2 bên và hạ thấp thân ...
-url = https://www.facebook.com/photo.php?fbid=3056603124584773&id=1755099078068524&set=a.1772230163022082&locale=pt_PT
+match = -240.0%%
+title = HOT&COLD D2 Toạ lạc tại:... - Hot Cold - Trà sữa & Xiên Que
+url = https://www.facebook.com/trasuaxienque/posts/hotcold-d2toạ-lạc-tại-32-đường-d2-phường-25-q-bình-thạnh-tp-hồ-chí-minhhotline-g/1200627010039097/
 
 [lacvietauction.vn]
 match = -80.0%%
