--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-11 06:22:53
+lastsearch = 2024-08-11 08:11:29
 
 [vinatools.com]
 match = -206.7%%
@@ -47,9 +47,9 @@ title = Cowon D2 gia nhập 'câu lạc bộ 16 GB'
 url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 
 [www.facebook.com]
-match = -186.7%%
-title = Ways Station Gaming - Ngày mai 7/3 chi nhánh 16 ...
-url = https://www.facebook.com/photo.php?fbid=1220848438345777&id=139181649845800&set=a.179106562519975
+match = -213.3%%
+title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -152,9 +152,9 @@ title = Korea Visa Application Center in Ha Noi
 url = https://www.visaforkorea-vt.com/
 
 [www.foody.vn]
-match = -73.3%%
-title = Bò Né 2 Chị Em - Đường D2 ở TP. HCM
-url = https://www.foody.vn/ho-chi-minh/bo-ne-2-chi-em-duong-d-2
+match = -106.7%%
+title = Pong Quán - Nguyễn Gia Trí ở TP. HCM
+url = https://www.foody.vn/ho-chi-minh/pong-quan-nguyen-gia-tri
 
 [www.youtube.com]
 match = -213.3%%
