--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-08-11 06:23:33
+lastsearch = 2024-08-11 08:09:28
 
 [demxanh.com]
 match = 18.2%%
 title = Thảm trải giường lông cừu TLC 04
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html?srsltid=AfmBOopXHFoWUFTptZxqaGgOeVLwey5hA7mhyb8jlGlXI23zVQgLTkVj
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -18,8 +18,8 @@ url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
 
 [thegioidemonline.vn]
 match = -109.1%%
-title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội - Chăn ga gối
-url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
+title = Thảm trải giường lông cừu giá rẻ TLC07 - Hà Nội - Chăn ga gối
+url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc07.html
 
 [noithatkenli.vn]
 match = -27.3%%
@@ -29,7 +29,7 @@ url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 [ru9.vn]
 match = -86.4%%
 title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOorUNWiY1GOtbFsKVGjHDntVmApOBxYO89p1vGjlbj3XeATBuaHL
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [cafeland.vn]
 match = -45.5%%
@@ -39,7 +39,7 @@ url = https://cafeland.vn/xu-huong/kich-thuoc-giuong-ngu-chuan-theo-phong-thuy-9
 [www.diepxuan.com]
 match = 50.0%%
 title = Điệp Xuân Thảm giường nỉ 120x190
-url = https://www.diepxuan.com/tham-giuong-ni-120x190.html?srsltid=AfmBOoqKtrBIjcvNfvYT2ILF0phhK8GudXPl4E-n-vYnVSbBhODgiVqr
+url = https://www.diepxuan.com/tham-giuong-ni-120x190.html
 
 [shopee.vn]
 match = -81.8%%
@@ -59,7 +59,7 @@ url = https://www.animemusicvideos.org/members/members_myprofile.php?user_id=122
 [jysk.vn]
 match = -72.7%%
 title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
-url = https://jysk.vn/kich-thuoc-giuong-ngu?srsltid=AfmBOorsZEPo3ocknh8zt8rUGDpOLh0vZeefXD6OhsZunn5vnXbYwvqg
+url = https://jysk.vn/kich-thuoc-giuong-ngu
 
 [anawood.vn]
 match = 15.8%%
@@ -77,9 +77,9 @@ title = Kệ Đỡ Nệm Lò Xo Kim Cương Divan Asling - Đà Nẵng
 url = https://suongtuyet.com/nem-lo-xo-kim-cuong-divan-asling
 
 [vikicare.com]
-match = 13.6%%
-title = thảm đá nhiệt nóng - Vikicare
-url = https://vikicare.com/product-tag/tham-da-nhiet-nong/?srsltid=AfmBOoq20VYdUAavJeku-YlgwZ3YcPgtK6pMwu0hi2E68gRzxoV7TcNM
+match = -27.3%%
+title = Thảm Đá Nóng Carefit Đá Tourmaline CFM 120
+url = https://vikicare.com/tham-da-nong-carefit-da-tourmaline-cfm-120-kich-thuoc-120x190-cm/
 
 [www.linkedin.com]
 match = -86.4%%
