--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-11 04:27:34
+lastsearch = 2024-08-11 08:10:49
 
 [www.diepxuan.com]
-match = 36.4%%
-title = Điệp Xuân Thảm giường Bode 140x190
-url = https://www.diepxuan.com/tham-giuong-bode-140x190.html
+match = 40.9%%
+title = Thảm giường nỉ 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [tiki.vn]
 match = -36.4%%
@@ -47,8 +47,8 @@ title = Thảm trải sàn BLANC' | Thảm lông, thảm dệt 3D đổi trả .
 url = https://blanc.vn/tham-trai-san
 
 [demxanh.com]
-match = -86.4%%
-title = Đệm bông ép 1m4 (1m4x1m9 và 1m4x2m) giá bao nhiêu?
+match = -54.5%%
+title = Đệm bông ép 1m4 (1m4x1m9 và 1m4x2m) giá ...
 url = https://demxanh.com/dem-bong-ep-1m4x2m-140x200cm-gia-bao-nhieu.html
 
 [www.kymdan.com]
@@ -157,9 +157,9 @@ title = Chăn drap nệm giường
 url = https://dongagroup.vn/noi-that-phong-ngu/chan-drap-nem-giuong-189.html
 
 [jysk.vn]
-match = -90.9%%
-title = Ga Chun 140 x 200 cm Bọc Nệm Cotton Satin Cao Cấp
-url = https://jysk.vn/ga-chun-140x200cm
+match = -118.2%%
+title = Seersucker duvet cover set ALICIA 200x220 multi - JYSK.vn
+url = https://jysk.vn/en-US/seersucker-duvet-cover-set-alicia-200x220-multi
 
 [noithatcaco.vn]
 match = -109.1%%
