--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-11 06:30:39
+lastsearch = 2024-08-11 08:09:47
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -15.0%%
-title = Abraham Palmer - UCSD Profiles
-url = https://profiles.ucsd.edu/abraham.palmer
+match = -5.0%%
+title = Gary Vilke - UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,14 +52,14 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = -6.2%%
-title = Spencer Behr, MD
-url = https://profiles.ucsf.edu/spencer.behr
+match = 10.0%%
+title = Sebastian Waszak, PhD
+url = https://profiles.ucsf.edu/sebastian.waszak
 
 [www.ncbi.nlm.nih.gov]
-match = -165.0%%
-title = End binding-3 inhibitor activates regenerative program in ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10591057/
+match = -130.0%%
+title = Exercise in patients with inflammatory bowel diseases
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
 
 [profiles.ucla.edu]
 match = -41.7%%
@@ -127,8 +127,8 @@ title = Bladder Cancer: Practice Essentials, Background, Anatomy
 url = https://emedicine.medscape.com/article/438262-overview
 
 [profiles.sc-ctsi.org]
-match = -80.0%%
-title = Paul Thompson - USC Health Sciences Profiles
+match = -5.0%%
+title = Paul Thompson - USC Profiles
 url = https://profiles.sc-ctsi.org/paul.thompson
 
 [asapdata.arc.nasa.gov]
@@ -258,7 +258,7 @@ url = https://ntrs.nasa.gov/api/citations/19910003143/downloads/19910003143.pdf
 
 [profiles.ucdavis.edu]
 match = -15.0%%
-title = R Randall | UC Davis Profiles
+title = R. Randall | UC Davis Profiles
 url = https://profiles.ucdavis.edu/r.randall
 
 [store.samhsa.gov]
